--- a/src/V01N01/referencias.bib
+++ b/src/V01N01/referencias.bib
@@ -197,3 +197,46 @@
 	number = {5},
 	pages = {511 - 522.e2},
 }
+
+@article{AFFIRM,
+  title = {A Comparison of Rate Control and Rhythm Control in Patients with Atrial Fibrillation},
+  journal = {New England Journal of Medicine},
+  volume = {347},
+  number = {23},
+  pages = {1825-1833},
+  year = {2002},
+  doi = {10.1056/NEJMoa021328},
+  note ={PMID: 12466506},
+}
+
+@article{RACE,
+  author = {Van Gelder, Isabelle C. and Hagens, Vincent E. and Bosker, Hans A. and Kingma, J. Herre and Kamp, Otto and Kingma, Tsjerk and Said, Salah A. and Darmanata, Julius I. and Timmermans, Alphons J.M. and Tijssen, Jan G.P. and Crijns, Harry J.G.M.},
+  title = {A Comparison of Rate Control and Rhythm Control in Patients with Recurrent Persistent Atrial Fibrillation},
+  journal = {New England Journal of Medicine},
+  volume = {347},
+  number = {23},
+  pages = {1834-1840},
+  year = {2002},
+  doi = {10.1056/NEJMoa021375},
+  note ={PMID: 12466507},
+}
+
+@article{malya,
+  author = {Malya, Rohith and Ganti, Latha},
+  title = {Is Rhythm Control Better Than Rate Control for New-Onset Atrial Fibrillation in the Emergency Department?},
+  journal = {Annals of Emergency Medicine},
+  volume = {65},
+  number = {5},
+  pages = {540 - 542.e2},
+}
+
+@article{HERMESAF,
+author = {Martín, Alfonso and Coll-Vinent, Blanca and Suero, Coral and Fernández-Simón, Amparo and Sánchez, Juan and Varona, Mercedes and Cancio, Manuel and Sánchez, Susana and Carbajosa, José and Malagón, Francisco and Montull, Eugeni and del Arco, Carmen and on behalf of the HERMES-AF investigators},
+title = {Benefits of Rhythm Control and Rate Control in Recent-onset Atrial Fibrillation: The HERMES-AF Study},
+journal = {Academic Emergency Medicine},
+volume = {26},
+number = {9},
+pages = {1034-1043},
+doi = {https://doi.org/10.1111/acem.13703},
+year = {2019}
+}
