--- a/src/V01N01/referencias.bib
+++ b/src/V01N01/referencias.bib
@@ -90,8 +90,8 @@
 	title     = {Pilar en una familia de destacados juristas},
 	journal   = {{Panamá América}},
 	author    = {{Redacción Día D}},
-	month     = {9},
-	year      = {2010-09-11},
+	year      = {2010},
+  month     = {09},
 	day       = {11},
 }
 
@@ -231,12 +231,23 @@
 }
 
 @article{HERMESAF,
-author = {Martín, Alfonso and Coll-Vinent, Blanca and Suero, Coral and Fernández-Simón, Amparo and Sánchez, Juan and Varona, Mercedes and Cancio, Manuel and Sánchez, Susana and Carbajosa, José and Malagón, Francisco and Montull, Eugeni and del Arco, Carmen and on behalf of the HERMES-AF investigators},
-title = {Benefits of Rhythm Control and Rate Control in Recent-onset Atrial Fibrillation: The HERMES-AF Study},
-journal = {Academic Emergency Medicine},
-volume = {26},
-number = {9},
-pages = {1034-1043},
-doi = {https://doi.org/10.1111/acem.13703},
-year = {2019}
+  author = {Martín, Alfonso and Coll-Vinent, Blanca and Suero, Coral and Fernández-Simón, Amparo and Sánchez, Juan and Varona, Mercedes and Cancio, Manuel and Sánchez, Susana and Carbajosa, José and Malagón, Francisco and Montull, Eugeni and del Arco, Carmen and on behalf of the HERMES-AF investigators},
+  title = {Benefits of Rhythm Control and Rate Control in Recent-onset Atrial Fibrillation: The HERMES-AF Study},
+  journal = {Academic Emergency Medicine},
+  volume = {26},
+  number = {9},
+  pages = {1034-1043},
+  doi = {https://doi.org/10.1111/acem.13703},
+  year = {2019}
+}
+
+@article{OTTAWA,
+  author = {Stiell, I. G. and Sivilotti, M. and Taljaard, M. and Birnie, D. and Vadeboncoeur, A. and Hohl, C. M. and McRae, A. D. and Rowe, B. H. and Brison, R. J. and Thiruganasambandamoorthy, V. and Macle, L. and Borgundvaag, B. and Morris, J. and Mercier, E. and Clement, C. M. and Brinkhurst, J. and Sheehan, C. and Brown, E. and Nemnom, M. J. and Wells, G. A. and Perry, J. J.},
+  year = {2020},
+  title = {Electrical versus pharmacological cardioversion for emergency department patients with acute atrial fibrillation (RAFF2): a partial factorial randomised trial},
+  journal = {Lancet},
+  volume = {395},
+  number = {10221},
+  pages = {339–349},
+  doi = {https://doi.org/10.1016/S0140-6736(19)32994-0},
 }
