--- a/src/V01N01/gaceta.tex
+++ b/src/V01N01/gaceta.tex
@@ -361,55 +361,67 @@ urgencias se encontró que la tasa de alivio de síntomas fue mayor en el grupo
 donde se emplearon estrategias de control del ritmo y el número de admisiones
 hospitalarias fue reducido\cite{HERMESAF}. En pacientes con FA < 48 horas y
 edad < 65 años es preferible controlar el ritmo; mientras que, en pacientes con
-falla cardíaca, enfermedad valvular, hipertensión y FA permamente se debe
-controlar la frecuencia cardíaca\cite{malya}.
+falla cardíaca, enfermedad valvular, hipertensión y FA permamente se recomienda
+controlar la frecuencia cardíaca en el abordaje inicial\cite{malya}.
 
 Para el control del ritmo, se puede utilizar cardioversión farmacológica o
 eléctrica. En 2020, se publicaron los resultados de un ensayo parcialmente
 aleatorizado realizado en servicios de emergencias en Canadá donde se comparaba
 contra placebo el uso de procainamida y cardioversión eléctrica en pacientes
 con FA\cite{OTTAWA}. Este trabajo es consistente con los hallazgos del
-Protocolo de Ottawa que se resume en la tabla X.
+Protocolo de Ottawa que se resume en la tabla siguiente:
 
 \begin{center}
-\footnotesize
-\centering
+  \footnotesize
+  \centering
   \begin{tabular}{ p{0.9\linewidth} }
-  \textbf{Protocolo agresivo de Ottawa} \\
-  \hline
-  \cellcolor[HTML]{CCCCCC} Cardioversión farmacológica \\
-  \hline
-  1 g de procainamida IV (administrar en 60 min, detenerse si PAS < 100 mmHg) \\
-  \hline
-  \cellcolor[HTML]{CCCCCC} Cardioversión eléctrica \\
-  \hline
-  Considerar nada por boca por 6 horas \\
-  Administrar sedación y analgesia para el procedimiento  \\
-  Empezar a 200 J sincronizado bifásico \\
-\end{tabular}
+    \textbf{Protocolo agresivo de Ottawa} \\
+    \hline
+    \cellcolor[HTML]{CCCCCC} Cardioversión farmacológica \\
+    \hline
+    1 g de procainamida IV (administrar en 60 min, detenerse si PAS < 100 mmHg) \\
+    \hline
+    \cellcolor[HTML]{CCCCCC} Cardioversión eléctrica \\
+    \hline
+    Considerar nada por boca por 6 horas \\
+    Administrar sedación y analgesia para el procedimiento  \\
+    Empezar a 200 J sincronizado bifásico \\
+  \end{tabular}
 \end{center}
 
-Se considera, en el escenario del servicio de urgencias, que para disminuir
-el tiempo de estancia se pueden emplear estrategias para control del ritmo,
-en lugar de estrategias de control de la frecuencia cardíaca ya que se asocian
-a disminución en el número de admisiones hospitalarias y en general son más
-seguras que las estrategias de control de la frecuencia cardíaca.
+Continuando el abordaje de este paciente, implementamos la estrategia de la vía
+ABC\cite{lip_abc_2017}. «A», anticoagulación / prevención del ictus; «B», buen
+control de los síntomas; «C», control de los factores de riesgo cardiovascular
+y comorbilidades.
 
-Continuando el abordaje de este paciente, implementamos la estrategia de la vía ABC\cite{lip_abc_2017}. «A», anticoagulacion / prevención del ictus; «B», buen control de los síntomas; «C», control de los factores de riesgo cardiovascular y comorbilidades.
-
-Siguiendo la vía ABC, hay que estratificar el riesgo de sufrir un ictus
-isquémico o trombótico usando las escales CHA$_{\text{2}}$DS$_{\text{2}}$-VASc
+Siguiendo la vía ABC, hasta ahora las estrategias de cardioversión ya sean
+farmacológicas o eléctricas van dirigidas al control de los síntomas y podemos
+incluirla en la «B» de la vía ABC. Hay que estratificar el riesgo de sufrir un
+ictus usando las escales CHA$_{\text{2}}$DS$_{\text{2}}$-VASc
 y HAS-BLED respectivamente.
 
+La elección inicial de anticoagulante sería warfarina en estos pacientes. Sin
+embargo a la luz de la evidencia actual; dabigatran, rivaroxaban y
+apixaban\cite{ApWaFA} también han demostrado ser buenos anticoagulantes
+incluso con menor cantidad de efectos adversos.
+
 Volviendo a la viñeta clínica, nuestro paciente curso con un episodio de FA
-paroxística que fue adecuadamente resuelto.
+paroxística que fue adecuadamente resuelto, luego de aplicar cardioversión
+eléctrica a 200 J, previa sedación al paciente con midazolam. Se le mantuvo
+monitorización la siguiente hora y curso con buena evolución hasta que se le
+dió egreso del servicio.
+
+En el contexto del alta y seguimiento de los pacientes con fibrilación atrial
+luego de su manejo inicial en el servicio de urgencias hay algunas anotaciones
+que resultan útiles en ellos, como vemos a continuación.
 
 Se considera al ECG de 12 derivadas como la técnica estándar de diagnóstico en
 FA\cite{mairesse2017}. Sin embargo para el cribado en población general que
 se encuentra asintomática, una intervención muy costo-efectiva es la palpación
 del pulso, esta técnica tiene una sensibilidad de 87-97\% y especificidad de
-70-81\%, esta simple intervención tiene una clase y nivel de evidencia IB. Es
-destacable también el uso de monitores de presión arterial automatizados y el
+70-81\%, esta simple intervención tiene una clase y nivel de evidencia IB.
+
+Es destacable también el uso de monitores de presión arterial automatizados y el
 uso de dispositivos \emph{wereables} como relojes o bandas electrónicas que
 con sus algoritmos de fotopletismografía ofrecen también una buena
 sensibilidad y especificidad, incluso con clase y nivel de evidencia
