--- a/src/V02N01/gaceta.tex
+++ b/src/V02N01/gaceta.tex
@@ -141,7 +141,7 @@ General de Cuba, cuando aún Cuba pertenecía al Imperio Español\cite{biojcf}.
 \begin{wrapfigure}{L}{0.18\textwidth}
 	\begin{center}
 		\vspace{-10pt}
-		\includegraphics[width=0.17\textwidth]{cjfinlay.jpg}
+		\includegraphics[width=0.17\textwidth]{trdawber.jpg}
 	\end{center}
 	\caption*{Dr. Carlos Juan Finlay}
 \end{wrapfigure}
